# tavern-aws

./: .gitignore  makefile  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
tavern_aws/: request.py  schema.yaml  session.py  tavernhook.py
