[project]
name = "tavern-aws"
version = "0.0.5"
description = "HTTP plugin for Tavern with AWS4Auth"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Alexander Eresov", email = "Alexander.Eresov@soundunited.com" },
]
dependencies = [
    "requests-aws4auth (>=1.3.1,<2.0.0)",
    "boto3 (>=1.38.38,<2.0.0)",
    "tavern (>=2.15.0,<3.0.0)",
]

[project.entry-points.tavern_http]
aws = "tavern_aws.tavernhook:TavernAwsPlugin"

[tool.poetry]
requires-poetry = ">=2.0"
packages = [{ include = "tavern_aws" }]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
boto3-stubs = { extras = ["boto3"], version = "^1.38.38" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 180

[tool.isort]
profile = "black"
skip = [".venv"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
